--- a/Main_11/templates/layout.html
+++ b/Main_11/templates/layout.html
@@ -34,7 +34,8 @@
     <a class="navbar-brand" href="/"><h1>Learn Music Thingy?</h1></a>
 
       <div class="navbar-nav p-2 round_corners">
-        <a class="nav-item nav-link" href="/learn/1">Learn</a>
+        <a class="navbar-brand" href="/keys/1">Learn Keys</a>
+        <a class="navbar-brand" href="/scales/1">Learn Scales</a>
         <a class="nav-item nav-link" href="/quiz/1">Quiz</a>
       </div>
 
