added js and button to mainpage

--- a/Main_11/templates/index.html
+++ b/Main_11/templates/index.html
@@ -2,6 +2,9 @@
 
 {% block content %}
 
+    <script type="text/javascript" src="{{ url_for('static', filename = 'homepage.js') }}"></script>
+
     <h1>pls learn music</h1>
+    <button id="start_button" type="button">Start Learning!</button>
 
 {% endblock %}
