--- a/Main_11/templates/learn.html
+++ b/Main_11/templates/learn.html
@@ -10,21 +10,35 @@
         let max = {{data[1]|tojson}}
     </script>
 
-    <div id="data_points" class="container">
+    <div class="container">
         <div class="row">
             <div class="col-md-12" id="name_here"></div>
         </div>
-        <div class="row">
-            <div class="col-md-8" id="ui_here"></div>
-            <div class="col-md-4" id="details_here"></div>
+        <br>
+        <div id="move_buttons">
+            <div class="row">
+                <div class="col-1">
+                    <button id="prev_button" type="button">Previous</button>
+                </div>
+                <div class="col-10">
+                </div>
+                <div class="col-1">
+                    <button id="next_button" type="button">Next</button>
+                </div>
+            </div>
+        </div>
+        <div id="data_points">
+            <div class="row">
+                <div class="col-1"></div>
+                <div class="col-6" id="ui_here">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSA3rbh0KePlOJ7pM4g5BdlohXoZf-2AEZwnLFXKnqGlKgVtiA7WineblpHsq8hQs3tpKc&usqp=CAU" width="100%">
+                    <br>
+                </div>
+                <div class="col-4" id="details_here">
+                </div>
+                <div class="col-1"></div>
+            </div>
         </div>
     </div>
-    <br>
-    <div id="move_buttons">
-        <button id="prev_button" type="button">Previous</button>
-        <button id="next_button" type="button">Next</button>
-    </div>
-
-
 
 {% endblock %}
