--- a/Main_11/templates/learn.html
+++ b/Main_11/templates/learn.html
@@ -15,18 +15,6 @@
             <div class="col-md-12" id="name_here"></div>
         </div>
         <br>
-        <div id="move_buttons">
-            <div class="row">
-                <div class="col-1">
-                    <button id="prev_button" type="button">Previous</button>
-                </div>
-                <div class="col-10">
-                </div>
-                <div class="col-1">
-                    <button id="next_button" type="button">Next</button>
-                </div>
-            </div>
-        </div>
         <div id="data_points">
             <div class="row">
                 <div class="col-1"></div>
@@ -38,6 +26,11 @@
                 </div>
                 <div class="col-1"></div>
             </div>
+        </div>
+        <div id="move_buttons">
+            <button id="prev_button" type="button">Previous</button>
+            <span id="display_page_number"></span>
+            <button id="next_button" type="button">Next</button>
         </div>
     </div>
 
