--- a/Main_11/templates/learn.html
+++ b/Main_11/templates/learn.html
@@ -33,6 +33,25 @@
             <span id="display_page_number"></span>
             <button id="next_button" type="button">Next</button>
         </div>
+        
+        <br>
+        <div id="white-keys">
+            <button class="key" style="width:30px;height:120px;background-color:white;"></button>
+            <button class="key" style="width:30px;height:120px;background-color:white;"></button>
+            <button class="key" style="width:30px;height:120px;background-color:white;"></button>
+            <button class="key" style="width:30px;height:120px;background-color:white;"></button>
+            <button class="key" style="width:30px;height:120px;background-color:white;"></button>
+            <button class="key" style="width:30px;height:120px;background-color:white;"></button>
+            <button class="key" style="width:30px;height:120px;background-color:white;"></button>
+            <button class="key" style="width:30px;height:120px;background-color:white;"></button>
+        </div>
+        <div id="black-keys" style="margin: -123px 17px;">
+            <button class="key" style="width:30px;height:80px;background-color:black;"></button>
+            <button class="key" style="width:30px;height:80px;background-color:black;"></button>
+            <button class="key" style="width:30px;height:80px;background-color:black;"></button>
+            <button class="key" style="width:30px;height:80px;background-color:black;"></button>
+            <button class="key" style="width:30px;height:80px;background-color:black;"></button>
+        </div>
     </div>
 
 {% endblock %}
