Correct piano keys

--- a/Main_11/templates/learn.html
+++ b/Main_11/templates/learn.html
@@ -49,6 +49,7 @@
         <div id="black-keys" style="margin: -123px 17px;">
             <button class="key" style="width:30px;height:80px;background-color:black;"></button>
             <button class="key" style="width:30px;height:80px;background-color:black;"></button>
+            <button class="key" style="width:30px;height:80px;background-color:transparent; border-color:transparent;" disabled></button>
             <button class="key" style="width:30px;height:80px;background-color:black;"></button>
             <button class="key" style="width:30px;height:80px;background-color:black;"></button>
             <button class="key" style="width:30px;height:80px;background-color:black;"></button>
