Updated quiz for responsiveness and questions

--- a/Main_11/templates/layout.html
+++ b/Main_11/templates/layout.html
@@ -36,7 +36,7 @@
       <div class="navbar-nav p-2 round_corners">
         <a class="navbar-brand" href="/keys/1">Learn Keys</a>
         <a class="navbar-brand" href="/scales/1">Learn Scales</a>
-        <a class="nav-item nav-link" href="/quiz/1">Quiz</a>
+        <a class="nav-item nav-link" href="/quiz">Quiz</a>
       </div>
 
   </div>
