--- a/Main_11/templates/layout.html
+++ b/Main_11/templates/layout.html
@@ -23,7 +23,7 @@
 
 
 
-    <title>Learn Music Thingy</title>
+    <title>Learn Music!</title>
   </head>
   <body class="fill">
     
@@ -31,12 +31,12 @@
     
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" href="/"><h1>Learn Music Thingy?</h1></a>
+    <a class="navbar-brand" href="/"><h1>Learn Music!</h1></a>
 
       <div class="navbar-nav p-2 round_corners">
         <a class="navbar-brand" href="/keys/1">Learn Keys</a>
         <a class="navbar-brand" href="/scales/1">Learn Scales</a>
-        <a class="nav-item nav-link" href="/quiz/1">Quiz</a>
+        <a class="nav-item nav-link" href="/quiz">Quiz</a>
       </div>
 
   </div>
