--- a/Main_11/templates/results.html
+++ b/Main_11/templates/results.html
@@ -5,13 +5,12 @@
     <script type="text/javascript" src="{{ url_for('static', filename = 'results.js') }}"></script>
 
     <script>
-        let num_correct = {{num_correct|tojson}}
-        // console.log(feedback)
+        correct = {{correct}}
     </script>
 
-    <h1>Quiz Results</h1>
-    <div id="results"></div>
-    <br>
-    <div id="buttons"></div>
-    
-    {% endblock %}
+    <h1>You got {{correct}} question(s) right.</h1>
+    <div>
+        Thanks for learning with us, and keep learning music!
+    </div>
+
+{% endblock %}
