--- a/Main_11/templates/quiz.html
+++ b/Main_11/templates/quiz.html
@@ -23,7 +23,7 @@
             <div id="media"><img src=""></div>
         </div>
         <div class="col-5">
-            <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Basic radio toggle button group">
+            <div id="choices" class="btn-group-vertical btn-group-lg" role="group" aria-label="Basic radio toggle button group">
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
                 <label class="btn btn-outline-primary" for="btnradio1">{{quiz_content['choices'][0]}}</label>
               
