update some buttons for clicking through

--- a/Main_11/templates/results.html
+++ b/Main_11/templates/results.html
@@ -12,5 +12,5 @@
     <div>
         Thanks for learning with us, and keep learning music!
     </div>
-
+    <div id="buttons"></div>
 {% endblock %}
