--- a/Main_11/templates/single_quiz.html
+++ b/Main_11/templates/single_quiz.html
@@ -18,37 +18,41 @@
     </script>
 
     <h1 id="head"></h1>
-    <p id="question"></p>
 
-    <div class="row">
-        <!--media-->
-        <div class="col-6">
-            <div id="media"><img src=""></div>
-        </div>
-        <!--radio button group-->
-        <div class="col-6">
-            <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off">
-                <label id="option_1" class="btn btn-outline-primary" for="btnradio1"></label>
-            
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                <label id="option_2" class="btn btn-outline-primary" for="btnradio2"></label>
-            
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-                <label id="option_3" class="btn btn-outline-primary" for="btnradio3"></label>
-    
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
-                <label id="option_4" class="btn btn-outline-primary" for="btnradio4"></label>
-            </div>
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col-6">
+                <div class="row">
+                    <p id="question"></p>
+                </div>
+                <div class="row">
+                    <div id="media"><img src=""></div>
+                </div>
+                <br>
+                <!--radio button group-->
+                <div class="row">
+                    <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Basic radio toggle button group">
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off">
+                        <label id="option_1" class="btn btn-outline-primary" for="btnradio1"></label>
+                    
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                        <label id="option_2" class="btn btn-outline-primary" for="btnradio2"></label>
+                    
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+                        <label id="option_3" class="btn btn-outline-primary" for="btnradio3"></label>
+
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
+                        <label id="option_4" class="btn btn-outline-primary" for="btnradio4"></label>
+                    </div>                
+                </div>
+                <br>
+                <!--media-->
+                <div class="row">
+                    <!--buttons-->
+                    <div id="buttons"></div>
+                </div>
+            </div>            
         </div>
     </div>
-    <div class="row">
-        <!--buttons-->
-        <div class="col-2">
-            <div id="buttons"></div>
-        </div>
-    </div>
-    
-
 
 {% endblock %}
