centered next/check/results buttons

--- a/Main_11/static/main.css
+++ b/Main_11/static/main.css
@@ -11,6 +11,9 @@
     padding-right: 20px;
 }
 
-#next_button, #prev_button{
-    width: 130px;
+#buttons {
+    margin: auto;
+    text-align: center;
 }
+
+
