Change the font and container

--- a/Main_11/templates/index.html
+++ b/Main_11/templates/index.html
@@ -4,7 +4,15 @@
 
     <script type="text/javascript" src="{{ url_for('static', filename = 'homepage.js') }}"></script>
 
-    <h1>pls learn music</h1>
-    <button id="start_button" type="button">Start Learning!</button>
+    <div class="app-container">
+        <div class="title">
+            <h1>Learning music with us!!</h1>
+        </div>
+        <br>
 
+        <br>
+        <div style="text-align:center">
+            <button id="start_button" type="button" class="btn btn-primary">Start Learning!</button>
+        </div>
+    </div>
 {% endblock %}
