--- a/Main_11/static/main.css
+++ b/Main_11/static/main.css
@@ -16,4 +16,28 @@
     text-align: center;
 }
 
+.app-container{
+    width:auto;
+    height:auto;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 7px;
+    border-color: #b3b2b2;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+    padding-top: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+}
 
+.title{
+    text-align: center;
+    font-family: Verdana, Helvetica, sans-serif;
+}
+
+.font-standard{
+    font-family: Verdana, Helvetica, sans-serif;
+}
