--- a/Main_11/templates/layout.html
+++ b/Main_11/templates/layout.html
@@ -31,7 +31,7 @@
     
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand font-standard" href="/"><h1>Learn Music!</h1></a>
+    <a class="navbar-brand font-standard" href="/"><h1>Music Theory</h1></a>
 
       <div class="navbar-nav p-2 round_corners">
         <a class="navbar-brand font-standard" href="/keys/1">Learn Keys</a>
