--- a/Main_11/static/main.css
+++ b/Main_11/static/main.css
@@ -41,3 +41,8 @@
 .font-standard{
     font-family: Verdana, Helvetica, sans-serif;
 }
+
+.question{
+    font-family: Verdana, Helvetica, sans-serif;
+    font-size: larger;
+}
