--- a/Main_11/templates/single_quiz.html
+++ b/Main_11/templates/single_quiz.html
@@ -23,7 +23,7 @@
             <div class="row justify-content-md-center">
                 <div class="col-6">
                     <div class="row">
-                        <p id="question"></p>
+                        <p id="question" class="question"></p>
                     </div>
                     <div class="row">
                         <div id="media"><img src=""></div>
