Add the hint element for html

--- a/Main_11/templates/single_quiz.html
+++ b/Main_11/templates/single_quiz.html
@@ -23,7 +23,13 @@
             <div class="row justify-content-md-center">
                 <div class="col-6">
                     <div class="row">
-                        <p id="question" class="question"></p>
+                        <p id="question" class="question col-10"></p>
+                        <div id="hint" class="col-2 title">
+                            <a href="#" title="That&apos;s the Hint">
+                                <img src="../static/lightbulb.png" alt="hint" id="hint_img" width="40px" height="40px">
+                                <div class="font-standard">Hint</div>
+                            </a>
+                        </div>
                     </div>
                     <div class="row">
                         <div id="media"><img src=""></div>
