--- a/Main_11/templates/layout.html
+++ b/Main_11/templates/layout.html
@@ -36,6 +36,7 @@
     <a class="navbar-brand font-standard" href="/"><h1>Music Theory</h1></a>
 
       <div class="navbar-nav p-2 round_corners">
+        <a class="navbar-brand font-standard" href="/notes/1">Learn Notes</a>
         <a class="navbar-brand font-standard" href="/keys/1">Learn Keys</a>
         <a class="navbar-brand font-standard" href="/scales/1">Learn Scales</a>
         <a class="nav-item nav-link font-standard" href="/quiz">Quiz</a>
