--- a/Main_11/templates/results.html
+++ b/Main_11/templates/results.html
@@ -14,8 +14,8 @@
         </div>
         <br>
         <div style="text-align: center;">
-            <button type="button" class="btn btn-primary" href="/home">Homepage</button>
-            <button type="button" class="btn btn-primary" href="/quiz">Quiz Again</button>
+            <button type="button" class="btn btn-primary" id="gohome" href="/home">Homepage</button>
+            <button type="button" class="btn btn-primary" id="goquiz" href="/quiz">Quiz Again</button>
         </div>
     </div>
 {% endblock %}
