changed buttons to match quiz buttons

--- a/Main_11/templates/learn.html
+++ b/Main_11/templates/learn.html
@@ -12,9 +12,9 @@
 
     <div class="container">
         <div id="move_buttons">
-            <button id="prev_button" type="button">Previous</button>
+            <button id="prev_button" type="button" class="btn btn-primary">Previous</button>
             <span id="display_page_number"></span>
-            <button id="next_button" type="button">Next</button>
+            <button id="next_button" type="button" class="btn btn-primary">Next</button>
         </div>
         <div class="row justify-content-center">
             <div class="col-md-10 text-center" id="name_here" style="font-weight: bold;font-size: 30px;line-height: 300%;"></div>
