Added quiz hints with animated tooltip

--- a/Main_11/static/main.css
+++ b/Main_11/static/main.css
@@ -46,8 +46,9 @@
     font-family: Verdana, Helvetica, sans-serif;
     font-size: larger;
 }
-
+/*
 .when_hover {
     cursor: pointer;
     text-decoration: underline;
 }
+*/
