--- a/Main_11/templates/single_quiz.html
+++ b/Main_11/templates/single_quiz.html
@@ -40,7 +40,7 @@
                     <br>
                     <!--radio button group-->
                     <div class="row">
-                        <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Basic radio toggle button group">
+                        <div id="radio-buttons" class="btn-group-vertical btn-group-lg" role="group" aria-label="Basic radio toggle button group">
                             <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off">
                             <label id="option_1" class="btn btn-outline-primary" for="btnradio1"></label>
                         
