Change the style of Navbar

--- a/Main_11/templates/layout.html
+++ b/Main_11/templates/layout.html
@@ -1,46 +1,69 @@
-<html>
-    <head>
-        {% block head %}
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="data:,">
-        <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/7007/7007020.png">
-        <!-- JQuery -->
-        <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-        <!-- bootstrap same as before -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-        <!-- JS and CSS file index -->
-        <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}">
-        <script type="text/javascript" src="{{ url_for('static', filename = 'search.js') }}"></script>
-        <!-- Too many styles, not all of them were in main.css -->
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="data:,">
+    <link rel="shortcut icon" href="https://cdn-icons.flaticon.com/png/512/3083/premium/3083417.png?token=exp=1651508524~hmac=4d5fdfff49148834e9366f9ff6a50f99">
 
-        {% endblock head %}
-    </head>
+<!-- jquery -->
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>  
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">
+  
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
-    <body>
-        <!-- Navbar referrence: https://getbootstrap.com/docs/4.0/components/navbar/ -->
-        <!-- Search box referrence: https://getbootstrap.com/docs/4.0/components/buttons/ -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/">
-                    <img src="https://cdn-icons-png.flaticon.com/512/7007/7007064.png" width="30" height="30" class="d-inline-block align-top" alt="website Zelda Weapons Pedia">
-                    Zelda Weapons Pedia
-                </a>
-                <a href="/create">Create New Weapon Page!</a>
-                <form class="form-inline" id="search-form">
-                    <input id="search-box" class="form-control mr-sm-2 " type="search" placeholder="#Search by weapon name" aria-label="Search" required>
-                    <button id="search-btn" class="btn btn-primary my-2 my-sm-0" alt="search button">Go</button>
-                </form>
-            </div>
-        </nav>
+  <script>
+    /*let search_results = {{search_results}}*/
+  </script>
 
-        <div id="content" class="container">
-            {% block content %}
-            
-            {% endblock content %}
+  <!-- Bootstrap CSS -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}">
+
+
+
+  <title>Music Theory!</title>
+  </head>
+  <body class="fill">
+    
+
+    
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  
+  <div class="container">
+    
+    <a class="navbar-brand font-standard" href="/">
+      <h1>Music Theory</h1>
+    </a>
+
+    <div class="navbar-nav p-2 round_corners">
+      <div class="dropdown">
+        <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Learning Materials
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item font-standard" href="/notes/1">Learn Notes</a>
+          <a class="dropdown-item font-standard" href="/keys/1">Learn Keys</a>
+          <a class="dropdown-item font-standard" href="/scales/1">Learn Scales</a>
         </div>
-    </body>
+      </div>
+      <a class="nav-item nav-link font-standard" href="/quiz">Quiz</a>
+    </div>
+  </div>
+</nav>
+
+    <div class="container p-5 round_corners">   
+        {% block content %}
+        {% endblock %}
+    </div>
+
+  </body>
 </html>
