Complete the style of index.html

--- a/Main_11/templates/index.html
+++ b/Main_11/templates/index.html
@@ -9,7 +9,11 @@
             <h1>Learning music with us!!</h1>
         </div>
         <br>
-
+        <div class="font-standard" style="text-align:center">
+            Try learning basic music theory including<br>
+            "Notes, Keys and Scales"<br>
+            Click Start Learning button to begin with our journey :)
+        </div>
         <br>
         <div style="text-align:center">
             <button id="start_button" type="button" class="btn btn-primary">Start Learning!</button>
