--- a/Main_11/templates/layout.html
+++ b/Main_11/templates/layout.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:,">
-    <link rel="shortcut icon" href="https://cdn-icons.flaticon.com/png/512/3083/premium/3083417.png?token=exp=1651508524~hmac=4d5fdfff49148834e9366f9ff6a50f99">
-
+    <link rel="shortcut icon" href="../static/icon_shortcut.png">
+    
 <!-- jquery -->
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>  
