changed background color to proposed base color

--- a/Main_11/templates/layout.html
+++ b/Main_11/templates/layout.html
@@ -58,7 +58,7 @@
   </div>
 </nav>
 
-    <div class="container p-5 round_corners">   
+    <div id="main-container" class="container p-5 round_corners">   
         {% block content %}
         {% endblock %}
     </div>
