--- a/Main_11/static/main.css
+++ b/Main_11/static/main.css
@@ -33,6 +33,10 @@
     padding-bottom: 15px;
 }
 
+#main-container {
+    background-color: rgb(198, 198, 198);
+}
+
 .title{
     text-align: center;
     font-family: Verdana, Helvetica, sans-serif;
@@ -45,6 +49,10 @@
 .question{
     font-family: Verdana, Helvetica, sans-serif;
     font-size: larger;
+}
+
+.fill {
+    background-color: lightgray;
 }
 /*
 .when_hover {
