--- a/Main_11/static/main.css
+++ b/Main_11/static/main.css
@@ -31,6 +31,8 @@
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 15px;
+    background-color: white;
+    opacity: 0.95;
 }
 
 .title{
@@ -52,3 +54,10 @@
     text-decoration: underline;
 }
 */
+
+/* body {
+    background-image: url('../static/');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+  } */
