--- a/Main_11/templates/index.html
+++ b/Main_11/templates/index.html
@@ -11,7 +11,7 @@
         <br>
         <div class="font-standard" style="text-align:right">
             Try learning basic music theory including<br>
-            "Notes, Keys and Scales"<br>
+            <div style="text-weight:bold">"Notes, Keys, and Scales"<br></div>
             Click on the Start Learning button to begin our journey :)
         </div>
         <br>
