update same design as homepage

--- a/Main_11/templates/results.html
+++ b/Main_11/templates/results.html
@@ -6,14 +6,14 @@
     <script>
         correct = {{correct}}
     </script>
-    <div class="app-container">
+    <div class="app-container" id="homepageBackground">
         <div class="title">
             <h1>You got {{correct}} question(s) right.</h1>
             <br>
             Thanks for learning with us, and keep learning music!
         </div>
         <br>
-        <div style="text-align: center;">
+        <div style="text-align:right;">
             <button type="button" class="btn btn-primary" id="gohome" href="/home">Homepage</button>
             <button type="button" class="btn btn-primary" id="goquiz" href="/quiz">Quiz Again</button>
         </div>
