--- a/Main_11/templates/single_quiz.html
+++ b/Main_11/templates/single_quiz.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="row justify-content-md-center">
                 <div class="col-6">
-                    <div class="row">
+                    <div class="row" id="details_here">
                         <p id="question" class="question col-10"></p>
                         <div id="hint" class="col-2 title">
                             <a id="hint-href" href="#" title="That&apos;s the Hint">
@@ -34,7 +34,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="row">
+                    <br>
+                    <div class="row" id="piano_section">
                         <div id="media"><img src=""></div>
                     </div>
                     <br>
